--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,10 +24,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
+        android:text="+"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="314dp"
         tools:layout_editor_absoluteY="506dp"
