--- a/app/src/main/res/layout/student_cart_items_layout.xml
+++ b/app/src/main/res/layout/student_cart_items_layout.xml
@@ -9,6 +9,7 @@
     android:layout_margin="10dp">
 
     <RelativeLayout
+        android:id="@+id/card_background"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@android:color/white"
@@ -32,9 +33,9 @@
             android:layout_marginStart="130dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="35dp"
-            android:text="unpaid"
-            android:textColor="@android:color/black"
+            android:text="0"
             android:textSize="14dp"
+            android:textColor="@color/colorBlack"
             android:textStyle="bold" />
 
     </RelativeLayout>
