--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -119,6 +119,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <TableLayout
+            android:id="@+id/tb1_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:stretchColumns="*">
+
+            <TableRow
+                android:id="@+id/tbRow1_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/row1_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Course" />
+
+                <TextView
+                    android:id="@+id/row2_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Qty" />
+
+                <TextView
+                    android:id="@+id/row3_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Price" />
+
+                <TextView
+                    android:id="@+id/row4_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total" />
+
+            </TableRow>
+
+        </TableLayout>
 
         <TableLayout
             android:id="@+id/tb1"
@@ -135,25 +173,25 @@
                     android:id="@+id/row1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Course" />
+                    android:text="" />
 
                 <TextView
                     android:id="@+id/row2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Qty" />
+                    android:text="" />
 
                 <TextView
                     android:id="@+id/row3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Price" />
+                    android:text="" />
 
                 <TextView
                     android:id="@+id/row4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total" />
+                    android:text="" />
 
             </TableRow>
 
